# qubika

./: README.md  pyproject.toml
qubika_challenge/: batch_predict.py  globals.py  register_model.py  training.py  transformer.py  utils.py
