[tool.poetry]
name = "qubika-challenge"
version = "0.1.0"
description = ""
authors = ["Rodrigo Martinez <tmxrodrigo.martinez@kof.com.mx>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
mlflow = "^2.13.1"

[tool.poetry.scripts]
train = "qubika_challenge.training:training"
register = "qubika_challenge.register_model:register"
batch_predict = "qubika_challenge.batch_predict:predict_batch"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
